--- a/style.css
+++ b/style.css
@@ -126,3 +126,105 @@
     color: white;
     border: 1px solid white;
 }
+#skills{
+    background-color: #EAFDFC;
+    padding: 70px 0;
+}
+.box{
+    width: 18%;
+    float: left;
+    text-align: center;
+    padding: 5px;
+}
+.card {
+    background: #fff;
+    border-radius: 2px;
+    display: inline-block;
+    height: 300px;
+    margin: 1rem;
+    position: relative;
+    width: 300px;
+  }
+  
+  .card-1 {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  }
+  
+  .card-1:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
+  #skills h2{
+    color: #1b4b54;
+    font-size: 40px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+  }
+  #skills h3{
+    font-size: 30px;
+    font-family: 'Dancing Script', cursive;
+    font-weight: bolder;
+  }
+  #skills p{
+    font-size: 17px;
+    color: grey;
+    font-family: 'Roboto', sans-serif;
+    padding: 10px;
+  }
+  #forms h2{
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #1b4b54;
+    font-family:'Roboto', sans-serif ;
+    text-align: center;
+  }
+  #forms{
+    margin: 5% 25%;
+    padding: 70px;
+    background-color: white;
+    text-align: center;
+  }
+  #forms .form-group{
+    font-size: 20px;
+    color: #1b4b54;
+    font-weight: bold;
+
+  }
+  input{
+    width: 250px;
+    padding: 5px;
+    margin: 2px 0;
+  }
+  #forms .button{
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+    background-color: #1b4b54;
+    border: 1px solid #1b4b54;
+  }
+  #forms .button:hover{
+    color: #1b4b54;
+    background-color: white;
+
+  }
+  footer{
+    padding: 10px;
+    color: #1b4b54;
+    background-color: white;
+    text-align: center;
+  }
+  #name-validation,#email-validation,#message-validation{
+    color: red;
+    font-size: 14px;
+    display: none;
+  }
+  .box card card-1{
+    text-align:center;
+  }
+  #know-more{
+    display: none;
+  }
+  
+  
